RESOLVED FIXED304660
struct RecordMetaData::cacheStorageVersion is uninitialized
https://bugs.webkit.org/show_bug.cgi?id=304660
Summary struct RecordMetaData::cacheStorageVersion is uninitialized
David Kilzer (:ddkilzer)
Reported 2025-12-23 18:31:22 PST
The default constructor for struct RecordMetaData::cacheStorageVersion is uninitialized in both of these source files: Source/WebKit/NetworkProcess/cache/NetworkCacheStorage.cpp Source/WebKit/NetworkProcess/storage/CacheStorageDiskStore.cpp ``` struct RecordMetaData { RecordMetaData() { } [...] unsigned cacheStorageVersion; [...] }; ```
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-23 18:31:38 PST
David Kilzer (:ddkilzer)
Comment 2 2025-12-23 18:36:04 PST
EWS
Comment 3 2025-12-28 15:57:59 PST
Committed 304970@main (8f65a21f20f3): <https://commits.webkit.org/304970@main> Reviewed commits have been landed. Closing PR #55845 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.