struct RecordMetaData::cacheStorageVersion is uninitialized <https://bugs.webkit.org/show_bug.cgi?id=304660> <rdar://167110450>

Reviewed by Chris Dumez.

* Source/WebKit/NetworkProcess/cache/NetworkCacheStorage.cpp:
(WebKit::NetworkCache::RecordMetaData):
- Switch to default constructor syntax.
- Initialize cacheStorageVersion to zero.
* Source/WebKit/NetworkProcess/storage/CacheStorageDiskStore.cpp:
(WebKit::RecordMetaData):
- Switch to default constructor syntax.
- Initialize cacheStorageVersion to zero.

Canonical link: https://commits.webkit.org/304970@main